more wip on trying to find a balance between stimulus and alpine
and having fun figuring out how to roll my own one way data bindings :|

--- a/app/javascript/styles/admin.css
+++ b/app/javascript/styles/admin.css
@@ -13,6 +13,10 @@
 /*@import "components/_service_announcement";*/
 /*@import "components/_bookmark_card";*/
 
+
+@import "admin/_dialogue";
+@import "admin/_kbd";
+
 @tailwind base;
 @tailwind components;
 
