--- a/app/views/layouts/admin-tailwind.html.haml
+++ b/app/views/layouts/admin-tailwind.html.haml
@@ -35,13 +35,12 @@
         .flashes
           .flashes__container
             - flash.each do |type, message|
-              .flashes__flash( class="flashes__flash--#{ type }" role="alert" )
+              .flashes__flash{ class: "flashes__flash--#{ type }", role: "alert", **zob("flash") }
                 .flashes__message= message
 
                 .flashes__close
-                  = behavior_data "close-flash" do |dataset|
-                    %button.flashes__close-button{ **dataset }
-                      = render "components/feather_icon", icon: "x"
+                  %button.flashes__close-button{ "@click": "close" }
+                    = render "components/feather_icon", icon: "x"
 
         -#= render_service_announcements
 
