--- a/app/views/layouts/admin-tailwind/_navbar.html.haml
+++ b/app/views/layouts/admin-tailwind/_navbar.html.haml
@@ -17,18 +17,17 @@
         .navbar__row
           = content_for :navbar_right
 
-          .dropdown.navbar__dropdown.dropdown--hoverable
-            = behavior_data "dropdown", active: "navbar__button--active" do |dataset|
-              %button.dropdown__trigger.navbar__button{ **dataset }
-                %span( class="hidden lg:inline mr-2" )
-                  Hi, #{ current_user.username }
+          .dropdown.navbar__dropdown.dropdown--hoverable{ **zob("dropdown") }
+            %button.dropdown__trigger.navbar__button{ "@click": "toggleIsOpen", ":class": { "navbar__button--active": "isOpen" }.to_json }
+              %span( class="hidden lg:inline mr-2" )
+                Hi, #{ current_user.username }
 
-                %svg( viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="inline" )
-                  %line( x1="3" y1="12" x2="21" y2="12" )
-                  %line( x1="3" y1="6" x2="21" y2="6" )
-                  %line( x1="3" y1="18" x2="21" y2="18" )
+              %svg( viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="inline" )
+                %line( x1="3" y1="12" x2="21" y2="12" )
+                %line( x1="3" y1="6" x2="21" y2="6" )
+                %line( x1="3" y1="18" x2="21" y2="18" )
 
-            .dropdown__container.navbar__dropdown-container.hidden
+            .dropdown__container.navbar__dropdown-container.hidden{ ":class": { "hidden": "isClosed" }.to_json }
               .dropdown__menu.navbar__dropdown-menu
                 - if content_for? :navbar_dropdown
                   .dropdown__row
