remove images related things with the exception of the table and the model

--- a/app/views/layouts/common/_footer.html.haml
+++ b/app/views/layouts/common/_footer.html.haml
@@ -15,13 +15,12 @@
 
           .item= link_to "Browser Extension", "https://github.com/transientBug/browser-extension", data: { turbolinks: false }
 
-          .item= link_to "Images", images_path
-
       .three.wide.column
         %h4.ui.inverted.header All the Credits!
         .ui.inverted.link.list
-          .item=link_to "Semantic UI", "https://semantic-ui.com/", data: { turbolinks: false }
-          .item= link_to "Rails 6", "https://github.com/rails/rails", data: { turbolinks: false }
+          .item= link_to "Tailwind CSS", "https://tailwindcss.com/", data: { turbolinks: false }
+          .item= link_to "Stimulus.js", "https://stimulusjs.org/", data: { turbolinks: false }
+          .item= link_to "Rails 6.1", "https://github.com/rails/rails", data: { turbolinks: false }
           .item
             = link_to "https://github.com/transientBug/transientbug-rails", data: { turbolinks: false } do
               %i.github.icon
