trying to get down some usable basic styles by copy-pasta first and I'll do cleanup and breakup later

--- a/app/views/layouts/application/_body.html.haml
+++ b/app/views/layouts/application/_body.html.haml
@@ -1,8 +1,5 @@
-= render "layouts/common/navbar"
+= render "layouts/application/navbar"
 
-.ui.pusher.main
-  %aside.tb.sidebar-menu
-    = content_for :sidebar
+= content_for :sidebar
 
-  %main.tb
-    = yield
+= yield
