--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -7,5 +7,5 @@
       = stylesheet_pack_tag "application", media: "all", "data-turbolinks-track": "reload"
       = javascript_pack_tag "application", "data-turbolinks-track": "reload", "data-turbolinks-eval": false
 
-  %body{ class: [  controller_name, action_name ] }
+  %body{ class: [  controller_name, action_name, "bg-gray-50" ] }
     = render "layouts/admin/body"
