nuke a lot of features, controllers and slim things down while working on the new front end
tag wizard is probably going to get trashed in general and the bulk and delete modals are going to be rethought
a lot to make them easier to copypasta new ones in and stay more railsy

trying out stimulus v2 as well for some little things like menus and what not

--- a/app/views/bookmarks/show.html.haml
+++ b/app/views/bookmarks/show.html.haml
@@ -1,50 +1,22 @@
 - content_for :page_title do
-  Bookmark '#{ @bookmark.title }'
+  = @bookmark.title
 
-- content_for :sidebar do
-  .tb.bulk-action-menu
-    %h2 Actions
+- content_for :page_actions do
+  %button( type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" )
+    Edit
 
-    = link_to edit_bookmark_path(@bookmark), class: "button button-white-outline hover:button-white text-white hover:text-gray-800" do
-      %i.pencil.icon
-      Edit
+  %button( type="button" class="ml-3 inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" )
+    Delete
 
-    -# TODO: replace
-    = modal_tag @bookmark, :delete, url: bookmark_path(@bookmark), class: "button button-red-outline hover:button-red" do
-      %i.trash.can.icon
-      Delete
-
-    %h2 Offline Archive
-
-    - if @bookmark.current_offline_cache.present?
-      .archive-info
-        Archive made
-        = render "components/time", time: @bookmark.current_offline_cache.created_at
-
-      = link_to "View Archive", bookmark_cache_index_path(@bookmark), data: { turbolinks: false }, class: "button button-white-outline hover:button-white text-white hover:text-gray-800"
-    - else
-      .archive-info
-        No archive available
-
-    = button_to bookmark_cache_index_path(@bookmark), class: "button button-white-outline hover:button-white text-white hover:text-gray-800" do
-      - if @bookmark.offline_caches.any?
-        Re-Archive
-      - else
-        Archive
-
-= model_tag @bookmark, only: [ :uri, :title ], no_checkbox: true
-
-.flex.flex-col.justify-between{ class: "lg:flex-row" }
-  .column.w-full{ class: "lg:mr-2 sm:mb-2" }
-    %h2.font-bold.text-3xl= @bookmark.title
-
+.flex.flex-col.justify-between.lg:flex-row
+  .w-full.flex.flex-col.lg:mr-2.sm:mb-2
     = link_to @bookmark.uri.to_s, @bookmark.uri.to_s
-    = render "components/time", time: @bookmark.created_at
+    = render RelativeTimeComponent.new(time: @bookmark.created_at)
 
-    = render "components/tags", tags: @bookmark.tags do |tag|
-      = bookmarks_tag_path(tag)
+    %div
+      = render TagComponent.with_collection(@bookmark.tags)
 
-  .column.w-full
+  .w-full
     - if @bookmark.description.present?
       :markdown
         #{ @bookmark.description }
